--- a/register.html
+++ b/register.html
@@ -89,8 +89,8 @@
             </div>
             <div class="form-group">
               <label for="country">Country :</label>
-              <select id="country" name="country" onchange="validateCountry()">
-                <option value="" disabled selected>Select your country</option>
+              <select id="country" name="country">
+                <option value=""disabled selected>Select your country</option>
                 <option value="usa">USA</option>
                 <option value="canada">Canada</option>
                 <option value="uk">UK</option>
